# factorio-server-dashboard

./: .dockerignore  .env.example  Cargo.toml  Dockerfile
.github/workflows/: build.yml
src/: main.rs
