[package]
name = "factorio-server-dashboard"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenv = "0.15.0"
linemux = "0.3.0"
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.49.0", features = [
    "macros",
    "rt-multi-thread",
    "signal",
] }
